namespace Proj_ICFT.ModelsNew;

public enum StatusEvolucao
{
    Inconclusivo = 0,
    Melhorou     = 1,
    Estavel      = 2,
    Piorou       = 3
}
